[package]
name = "grib2_reader"
version = "0.1.2"
edition = "2021"
description = "A simple library capable of reading and parsing GRIB version 2 files"
license = "MIT OR Apache-2.0"
keywords = ["GRIB"]
homepage = "https://github.com/christian-boks/grib2_reader"
repository = "https://github.com/christian-boks/grib2_reader"
exclude = ["data/*", ".vscode/*"]

[package.metadata.docs.rs]
all-features = true

[features]
async = ["dep:tokio"]

[dependencies]
thiserror = "1.0.24"
bitstream-io = "2.2.0"
tokio = { version = "1.33.0", features = [
    "macros",
    "fs",
    "test-util",
    "io-util",
], optional = true }
